# pyproject.toml
[project]
name = "docling-llava-demo"
version = "0.1.0"
description = "Docling + LLaVA integration"
authors = [{ name = "Yevhenii Melnykov" }]
requires-python = ">=3.10"

dependencies = [
  "docling",
  "docling-core",
  "docling-parse",
  "matplotlib>=3.10.3",
  "pandas>=2.2.3",
  "pillow",
  "psutil>=7.0.0",
  "pymupdf>=1.25.5",
  "python-docx",
  "python-pptx",
]
