[project]
name = "docling-llava-demo"
version = "0.1.0"
description = "Docling + LLaVA integration"
authors = [{ name = "Yevhenii Melnykov" }]
requires-python = ">=3.10"

dependencies = [
  "docling",
  "docling-core",
  "docling-parse",
  "matplotlib>=3.10.3",
  "pandas>=2.2.3",
  "pillow",
  "pymupdf>=1.25.5",
  "requests>=2.32.3",
  "tomli>=2.2.1"
]
